--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "main": "OpenRCT2TwitchServer.js",
     "author": "Benedikt Magnus",
     "dependencies": {
-        "tmi.js": ""
+        "tmi.js": "^1.3.1"
     }
 }
